syntax = "proto3";


option go_package = "pickrewardapi/internal/application/pay/proto";

package pay.v1;

service PayV1 {
  rpc GetPayByID (PayIDReq) returns (PayReply) {}
  rpc GetAllPays(EmptyReq) returns (PaysReply){}
}

message Reply {
  int32 status = 1;
  Error error = 2;
}

message Error {
  int32 errorCode = 1;
  string errorMessage = 2;
}

message PayIDReq{
  string id = 1;
}

message PaysReply{
  message Pay {
    string id = 1;
    string name = 2;
    int32 order = 3;
    int32 payStatus = 4;
    int64 createDate = 5;
    int64 updateDate = 6;
  }
  
  Reply reply = 1;
  repeated Pay pays = 2;
}


message PayReply{
  message Pay {
    string id = 1;
    string name = 2;
    int32 order = 3;
    int32 payStatus = 4;
    int64 createDate = 5;
    int64 updateDate = 6;
  }
  
  Reply reply = 1;
  Pay pay = 2;
}


message EmptyReq{}



